kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lounas
  labels:
    name: lounas
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: lounas
    spec:
      containers:
        - name: lounas
          image: eu.gcr.io/echie-prod/lounas:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /_health
              port: 80
          livenessProbe:
            httpGet:
              path: /_health
              port: 80
