kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lounas
spec:
  type: NodePort
  selector:
    app: lounas
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
