kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lounas-ingress
spec:
  backend:
    serviceName: lounas
    servicePort: 80
  rules:
    - host: lounas.echie.net
      http:
        paths:
          - backend:
              serviceName: lounas
              servicePort: 80
            path: /
